

# add_library (ec_tool
# ${ETHERCAT_DIR}/tool/CommandAlias.cpp
# ${ETHERCAT_DIR}/tool/CommandConfig.cpp
# ${ETHERCAT_DIR}/tool/Command.cpp
# ${ETHERCAT_DIR}/tool/CommandIp.cpp
# ${ETHERCAT_DIR}/tool/CommandCStruct.cpp
# ${ETHERCAT_DIR}/tool/CommandData.cpp
# ${ETHERCAT_DIR}/tool/CommandDebug.cpp
# ${ETHERCAT_DIR}/tool/CommandDomains.cpp
# ${ETHERCAT_DIR}/tool/CommandDownload.cpp
# ${ETHERCAT_DIR}/tool/CommandEoe.cpp
# ${ETHERCAT_DIR}/tool/CommandFoeRead.cpp
# ${ETHERCAT_DIR}/tool/CommandFoeWrite.cpp
# ${ETHERCAT_DIR}/tool/CommandGraph.cpp
# #${ETHERCAT_DIR}/tool/CommandIp.cpp
# ${ETHERCAT_DIR}/tool/CommandMaster.cpp
# ${ETHERCAT_DIR}/tool/CommandPdos.cpp
# ${ETHERCAT_DIR}/tool/CommandRegRead.cpp
# ${ETHERCAT_DIR}/tool/CommandRegWrite.cpp
# ${ETHERCAT_DIR}/tool/CommandRescan.cpp
# ${ETHERCAT_DIR}/tool/CommandSdos.cpp
# ${ETHERCAT_DIR}/tool/CommandSiiRead.cpp
# ${ETHERCAT_DIR}/tool/CommandSiiWrite.cpp
# ${ETHERCAT_DIR}/tool/CommandSlaves.cpp
# ${ETHERCAT_DIR}/tool/CommandSoeRead.cpp
# ${ETHERCAT_DIR}/tool/CommandSoeWrite.cpp
# ${ETHERCAT_DIR}/tool/CommandStates.cpp
# ${ETHERCAT_DIR}/tool/CommandUpload.cpp
# ${ETHERCAT_DIR}/tool/CommandVersion.cpp
# ${ETHERCAT_DIR}/tool/CommandXml.cpp
# ${ETHERCAT_DIR}/tool/DataTypeHandler.cpp
# ${ETHERCAT_DIR}/tool/FoeCommand.cpp
# ${ETHERCAT_DIR}/tool/MasterDevice.cpp
# ${ETHERCAT_DIR}/tool/NumberListParser.cpp
# ${ETHERCAT_DIR}/tool/SdoCommand.cpp
# ${ETHERCAT_DIR}/tool/sii_crc.cpp
# ../ec_tool/SoeCommand.cpp
# ../ec_tool/tool_main.cpp
# )
# INCLUDE_DIRECTORIES(${ETHERCAT_DIR})
# INCLUDE_DIRECTORIES(${ETHERCAT_DIR}/tool)
# INCLUDE_DIRECTORIES(${ETHERCAT_DIR}/include)
# INCLUDE_DIRECTORIES(${ETHERCAT_DIR}/master)
# INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
# LINK_DIRECTORIES(${ETHERCAT_DIR}/lib/.libs)
# LINK_DIRECTORIES("LIBXML2_LIBRARIES")
